2006-04-21  Andy Wingo  <wingo@pobox.com>

	* configure.ac: Remove check for obsolete pygtk version that
	doesn't meet our requirements.

2006-04-20  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/viewer.py:
	Remember previous state before scrubbing, so we can go back to that
	state (playing or paused).
	Should fix #338064

2006-04-20  Edward Hervey  <edward@fluendo.com>

	* pitivi/playground.py:
	Format default error messages in a saner way.

2006-04-20  Edward Hervey  <edward@fluendo.com>

	* pitivi/bin.py:
	Moved getRealVideoSink(), record() and stopRecording() methods up from
	SmartTimelineBin to SmartBin.
	* pitivi/playground.py:
	Documentation cleanup.
	Make relevant functions return False for failures.
	Added _handleError() and _handleWarning() methods for analyzing the
	error/warning information and creating user-friendly messages.
	* pitivi/utils.py:
	New function bin_contains() in order to figure out if an element is in
	a bin recursively.
	* pitivi/ui/mainwindow.py:
	Only display one ErrorDialogBox at a time
	* pitivi/ui/viewer.py:
	Improve aspect ratio handling

2006-04-10  Edward Hervey  <edward@fluendo.com>

	* pitivi/playground.py:
	Connect bus message handler to the default bin too.
	* pitivi/ui/mainwindow.py:
	Close error message when you click on OK
	* pitivi/ui/viewer.py:
	Remove error message for failed state change.

2006-04-10  Edward Hervey  <edward@fluendo.com>

	* pitivi/playground.py:
	Added "error" signal
	* pitivi/ui/mainwindow.py:
	Show Error dialog box on playground bus errors.
	* pitivi/ui/viewer.py:
	slight bug

2006-04-10  Edward Hervey  <edward@fluendo.com>

	* pitivi/playground.py:
	Return gst.StateChangeReturn from setting pipeline to PLAYING in play()
	* pitivi/ui/viewer.py:
	Display error message if we couldn't set the default bin to PLAYING
	* pitivi/ui/timelineobjects.py:
	remove debug tooltip

2006-04-10  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/mainwindow.py: